--- a/science/yum/index.html
+++ b/science/yum/index.html
@@ -124,40 +124,20 @@
           </div>
         </section>
         <!-- Space news-->
-        <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100"><section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
+        <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
           <div id="section2" data-type="anchor" class="shell shell-wide">
             <div class="range text-center">
               <div class="cell-lg-5 text-md-left text-lg-right">
-                <!--<div class="count count-porcelain"></div>-->
-                  <h2 class="heading">Even More Food!</h2>
-                  <p>
-                    <p>
-                    <img src="../../images/Food11.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  </p>
-                  <p>  
-                    <p>
-                    <img src="../../images/Food12.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  </p>
-                  <p>
-                    <p>
-                    <img src="../../images/Food13.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  </p>
-                  <p>
-                    <p>
-                    <img src="../../images/Food14.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  <p>
-                    <img src="../../images/Food15.jpg" alt="" class="img-responsive"></a>
-                  </p> 
+                <h2 class="heading">Even More Food!</h2>
+                <p><img src="../../images/Food11.jpg" alt="" class="img-responsive"></p>
+                <p><img src="../../images/Food12.jpg" alt="" class="img-responsive"></p>
+                <p><img src="../../images/Food13.jpg" alt="" class="img-responsive"></p>
+                <p><img src="../../images/Food14.jpg" alt="" class="img-responsive"></p>
+                <p><img src="../../images/Food15.jpg" alt="" class="img-responsive"></p>
               </div>
-              <!--<div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>-->
             </div>
           </div>
         </section>
-
       </main>
       <!-- Page Footer-->
       <footer class="page-foot bg-image bg-image-3 bg-fixed">
