--- a/science/yum/index.html
+++ b/science/yum/index.html
@@ -12,28 +12,31 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:400,300%7CMontserrat:400,700">
     <link rel="stylesheet" href="../../css/style.css">
     <!--[if lt IE 10]>
-    <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
+    <div style="background:#212121;padding:10px 0;box-shadow:3px 3px 5px 0 rgba(0,0,0,.3);clear:both;text-align:center;position:relative;z-index:1;">
+      <a href="http://windows.microsoft.com/en-US/internet-explorer/">
+        <img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today.">
+      </a>
+    </div>
     <script src="js/html5shiv.min.js"></script>
     <![endif]-->
   </head>
   <body>
-    <!-- Page-->
+    <!-- Page wrapper-->
     <div class="page text-center text-md-left">
       <div id="bg-default">
         <canvas id="bgCanvas"></canvas>
         <div id="guiHolder"></div>
       </div>
-      <!-- Page Header-->
+
+      <!-- Header -->
       <header class="page-head bg-image bg-image-1 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
-        <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
-          <nav data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fixed" class="rd-navbar">
+          <nav class="rd-navbar" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fixed">
             <div class="rd-navbar-inner">
               <div class="rd-navbar-panel">
-                <button data-rd-navbar-toggle=".rd-navbar-nav-wrap" class="rd-navbar-toggle"><span></span></button>
+                <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
               </div>
               <div class="rd-navbar-nav-wrap">
-                <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="#home">Home</a></li>
                   <li><a href="#intro">Food!</a></li>
@@ -45,158 +48,111 @@
             </div>
           </nav>
         </div>
+
         <div class="shell shell-wide">
           <div class="range range-md-middle">
-            <div class="cell-md-6"><a href="../" class="brand"><img src="../../images/fluffy_pancake.jpeg" alt="" class="img-responsive"></a></div>
-            <div class="cell-md-6 text-md-right">
+            <div class="cell-md-6">
+              <a href="../" class="brand">
+                <img src="../../images/fluffy_pancake.jpeg" alt="Fluffy Pancake" class="img-responsive" />
+              </a>
             </div>
           </div>
         </div>
+
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
-              <h1>Yum!<br class="hidden visible-lg-inline-block">
-              </h1>
+              <h1>Yum!</h1>
               <p class="big postfix-xl-right--30">Even when you're sad, delicious food is still delicious.</p>
-            </div>
-            <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
-              <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
             </div>
           </div>
         </div>
       </header>
-      <!-- Page Content-->
+
+      <!-- Main Content -->
       <main class="page-content">
-        <!-- About-->
-        <!--<section class="bg-white section-50 section-lg-80 section-xl-100">-->
-          <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
-          <div id="intro" data-type="anchor" class="shell shell-wide">
+        <!-- Food Section -->
+        <section id="intro" data-type="anchor" class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
+          <div class="shell shell-wide">
             <div class="range text-center">
               <div class="cell-lg-5 text-md-left text-lg-right">
-                <!--<div class="count count-porcelain"></div>-->
-                  <h2 class="heading">Food!</h2>
-                  <p>
-                    <img src="../../images/Food1.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  <p>  
-                    <img src="../../images/Food2.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  <p>
-                    <img src="../../images/Food3.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  <p>
-                    <img src="../../images/Food4.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  <p>
-                    <img src="../../images/Food5.jpg" alt="" class="img-responsive"></a>
-                  </p>
+                <h2 class="heading">Food!</h2>
+                <p><img src="../../images/Food1.jpg" alt="Food 1" class="img-responsive" /></p>
+                <p><img src="../../images/Food2.jpg" alt="Food 2" class="img-responsive" /></p>
+                <p><img src="../../images/Food3.jpg" alt="Food 3" class="img-responsive" /></p>
+                <p><img src="../../images/Food4.jpg" alt="Food 4" class="img-responsive" /></p>
+                <p><img src="../../images/Food5.jpg" alt="Food 5" class="img-responsive" /></p>
               </div>
-              <!--<div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>-->
             </div>
           </div>
         </section>
 
-        <!-- Research-->
-          <section class="page-head bg-image bg-image-2 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
-          <div id="section1" data-type="anchor" class="shell shell-wide">
+        <!-- More Food Section -->
+        <section id="section1" data-type="anchor" class="page-head bg-image bg-image-2 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
+          <div class="shell shell-wide">
             <div class="range text-center">
               <div class="cell-lg-5 text-md-left text-lg-right">
-                <!--<div class="count count-porcelain"></div>-->
-                  <h2 class="heading">More Food!</h2>
-                  <p>
-                    <img src="../../images/Food6.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  <p>  
-                    <img src="../../images/Food7.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  <p>
-                    <img src="../../images/Food8.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  <p>
-                    <img src="../../images/Food9.jpg" alt="" class="img-responsive"></a>
-                  </p>
-                  <p>
-                    <img src="../../images/Food10.jpg" alt="" class="img-responsive"></a>
-                  </p>
+                <h2 class="heading">More Food!</h2>
+                <p><img src="../../images/Food6.jpg" alt="Food 6" class="img-responsive" /></p>
+                <p><img src="../../images/Food7.jpg" alt="Food 7" class="img-responsive" /></p>
+                <p><img src="../../images/Food8.jpg" alt="Food 8" class="img-responsive" /></p>
+                <p><img src="../../images/Food9.jpg" alt="Food 9" class="img-responsive" /></p>
+                <p><img src="../../images/Food10.jpg" alt="Food 10" class="img-responsive" /></p>
               </div>
-             <!-- <div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>-->
             </div>
           </div>
         </section>
-        <!-- Space news-->
-        <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
-          <div id="section2" data-type="anchor" class="shell shell-wide">
+
+        <!-- Even More Food Section -->
+        <section id="section2" data-type="anchor" class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
+          <div class="shell shell-wide">
             <div class="range text-center">
               <div class="cell-lg-5 text-md-left text-lg-right">
                 <h2 class="heading">Even More Food!</h2>
-                <p><img src="../../images/Food11.jpg" alt="" class="img-responsive"></p>
-                <p><img src="../../images/Food12.jpg" alt="" class="img-responsive"></p>
-                <p><img src="../../images/Food13.jpg" alt="" class="img-responsive"></p>
-                <p><img src="../../images/Food14.jpg" alt="" class="img-responsive"></p>
-                <p><img src="../../images/Food15.jpg" alt="" class="img-responsive"></p>
+                <p><img src="../../images/Food11.jpg" alt="Food 11" class="img-responsive" /></p>
+                <p><img src="../../images/Food12.jpg" alt="Food 12" class="img-responsive" /></p>
+                <p><img src="../../images/Food13.jpg" alt="Food 13" class="img-responsive" /></p>
+                <p><img src="../../images/Food14.jpg" alt="Food 14" class="img-responsive" /></p>
+                <p><img src="../../images/Food15.jpg" alt="Food 15" class="img-responsive" /></p>
               </div>
             </div>
           </div>
         </section>
       </main>
-      <!-- Page Footer-->
-      <footer class="page-foot bg-image bg-image-3 bg-fixed">
-        <div id="conclusion" data-type="anchor" class="shell shell-wide">
+
+      <!-- Footer -->
+      <footer id="conclusion" data-type="anchor" class="page-foot bg-image bg-image-3 bg-fixed">
+        <div class="shell shell-wide">
           <div class="range">
             <div class="cell-md-5 cell-xl-3">
               <h2 class="heading heading-mod">I Just Love Food!!!</h2>
-              <!--<div class="count count-white"></div>-->
-              <p></p>
-            </div>
-            <div class="cell-md-preffix-1 cell-md-6 cell-xl-preffix-1 cell-xl-3">
             </div>
             <div class="cell-lg-12 cell-xl-5 offset-sm-top-60 text-md-center offset-top-50 text-lg-left offset-xl-top-0">
               <div class="range range-lg-bottom range-lg-justify range-xl-left">
                 <div class="cell-lg-6 cell-xl-10 cell-xl-preffix-2">
                   <div class="preffix-xl-left-30">
                     <address class="address">
-                      <!--<p>New Mexico State University</p>-->
                       <dl class="contact-info">
                         <dt>tel:</dt>
-                        <dd><a href="callto:#">805-315-3183</dd>
-                      </dl><a href="mailto:#">godines@nmsu.edu</a>
+                        <dd><a href="tel:8053153183">805-315-3183</a></dd>
+                      </dl>
+                      <a href="mailto:godines@nmsu.edu">godines@nmsu.edu</a>
                       <p class="offset-xl-top-15">No matter what happens on Earth, astronomers will have the sky.</p>
                     </address>
                     <ul class="list-inline list-inline-sm">
                       <li><a href="https://www.linkedin.com/in/daniel-godinez" class="icon icon-white fa-linkedin"></a></li>
                       <li><a href="https://github.com/Professor-G" class="icon icon-white fa-github"></a></li>
-                      <!--<li><a href="#" class="icon icon-white fa-twitter"></a></li>-->
-                      <!--<li><a href="#" class="icon icon-white fa-google-plus"></a></li>-->
-                      <!--<li><a href="#" class="icon icon-white fa-youtube"></a></li>-->
                     </ul>
                   </div>
                 </div>
-                <!--<div class="cell-lg-3 text-lg-center cell-xl-10 text-xl-left offset-xl-top-110"><a href="index.html" class="brand preffix-xl-left-30"><img src="images/wave.jpg" width="235" height="142" alt="" class="img-responsive">--></a><spanclass="copyright">&#169;
-<span id="copyright-year"></span>
-|
-<span>All Rights Reserved</span></span></div>
               </div>
             </div>
           </div>
         </div>
-
-        <!-- RD Google Map-->
-         <!-- <div class="rd-google-map">-->
-           <!-- <div id="google-map" data-zoom="14" data-x="-73.9874068" data-y="40.643180" class="rd-google-map__model"></div>-->
-          <!--  <ul class="rd-google-map__locations">-->
-             <!-- <li data-x="-73.9874068" data-y="40.643180">-->
-               <!-- <p>New York, 28 Jackson Blvd Ste 1020 Chicago, IL 60604-2340<br>-->
- <!-- <span>800-2345-6789</span>-->
-              <!--  </p>-->
-             <!-- </li>-->
-            <!-- {%FOOTER_LINK}-->
-           <!-- </ul>-->
-         <!-- </div>-->
-        <!--coded by gel-->
       </footer>
     </div>
 
-    <!-- Java script-->
+    <!-- JavaScript -->
     <script src="../../js/core.min.js"></script>
     <script src="../../js/script.js"></script>
   </body>
