--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               </a>
               <div class="interest-content">
                 <h4><a href="science/planet9">Protoplanetary Disks</a></h4>
-                <p>I have conducted theoretical work on solid concentration and planetesimal formation in turbulent disks. I used 3D self-gravitating simulations of the streaming instability to show that overdense filaments generate optically thick sub-millimeter emission, leading to significant underestimates of disk mass when standard optically thin assumptions are applied. This work combined large-scale numerical modeling on HPC systems with radiative transfer post-processing, including dust scattering, to produce synthetic ALMA observables and quantify the mass bias introduced by unresolved small-scale structure.</p>
+                <p>I have conducted theoretical work on solid concentration and planetesimal formation in turbulent disks. I ran 3D self-gravitating simulations of the streaming instability to show that overdense filaments generate optically thick sub-millimeter emission, leading to significant underestimates of disk mass when standard optically thin assumptions are applied. This work combined large-scale numerical modeling on HPC systems with radiative transfer post-processing, including dust scattering, to produce synthetic ALMA observables and quantify the mass bias introduced by unresolved small-scale structure.</p>
               </div>
             </div>
 
@@ -150,7 +150,7 @@
               </a>
               <div class="interest-content">
                 <h4><a href="science/slime-mold">Dark Matter</a></h4>
-                <p>I have also contributed to dark matter research, using microlensing as a probe of compact dark objects. In one study, we projected LSST constraints on the abundance of primordial black holes (PBHs) as a dark matter component, demonstrating that control of the false positive rate is critical for achieving competitive limits. By simulating realistic light curves and evaluating classifiers based on χ², Boosted Decision Trees, and Bayesian-based model selection, we showed how machine learning can enhance PBH sensitivity in next-generation time-domain surveys. In related work, we applied unsupervised anomaly detection to identify microlensing events directly from LSST-like light curves, enabling real-time filtering of rare transients — including those caused by compact dark matter — with minimal assumptions about signal shape.</p>
+                <p>I have investigated the detectability of dark matter using microlensing as a probe of compact dark objects. In one study, we projected LSST constraints on the abundance of primordial black holes (PBHs) as a dark matter component, demonstrating that control of the false positive rate is critical for achieving competitive limits. By simulating realistic light curves and evaluating classifiers based on χ², Boosted Decision Trees, and Bayesian-based model selection, we showed how machine learning can enhance PBH sensitivity in next-generation time-domain surveys. In related work, we applied unsupervised anomaly detection to identify microlensing events directly from LSST-like light curves, enabling real-time filtering of rare transients — including those caused by compact dark matter — with minimal assumptions about signal shape.</p>
               </div>
             </div>
 
