--- a/science/yum/index.html
+++ b/science/yum/index.html
@@ -111,7 +111,7 @@
                 <h2 class="heading">Even More Food!</h2>
                 <p><img src="../../images/Food11.jpg" alt="Food 11" class="img-responsive" /></p>
                 <p><img src="../../images/Food12.jpg" alt="Food 12" class="img-responsive" /></p>
-                <p><img src="../../images/Food13.jpg" alt="Food 13" class="img-responsive" /></p>
+                <p><img src="../../images/Food1_.jpg" alt="Food 13" class="img-responsive" /></p>
                 <p><img src="../../images/Food14.jpg" alt="Food 14" class="img-responsive" /></p>
                 <p><img src="../../images/Food15.jpg" alt="Food 15" class="img-responsive" /></p>
               </div>
