--- a/science/index.html
+++ b/science/index.html
@@ -38,8 +38,9 @@
  
               <font size="+3"><p><b><a href="microlensing">Gravitational Lensing</a></b></p>
               <p><b><a href="blobs">Lyman-alpha Blobs</a></b></p>
+              <p><b><a href="protoplanetary">Protoplanetary Disks</a></b></p>
               <p><b><a href="green-beans">Green Bean Galaxies</a></b></p>
-              <p><b><a href="planet9">Planet 9</a></b></p>
+              <p><b><a href="dark-matter">Dark Matter</a></b></p>
               <p><b><a href="slime-mold">Slime Mold</a></b></p>
               <p><b><a href="lsst">LSST</a></b></p></font>
             </div>
