--- a/science/protoplanetary/index.html
+++ b/science/protoplanetary/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="wide wow-animation">
   <head>
     <!-- Site Title-->
-    <title>Planet 9</title>
+    <title>Protoplanetary Disks</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,7 +47,7 @@
         </div>
         <div class="shell shell-wide">
           <div class="range range-md-middle">
-            <div class="cell-md-6"><a href="../" class="brand"><img src="../../images/planet_9.jpeg" alt="" class="img-responsive"></a></div>
+            <div class="cell-md-6"><a href="../" class="brand"><img src="../../images/protodisk_250.jpeg" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
             </div>
           </div>
@@ -55,9 +55,9 @@
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
-              <h1>Planet 9<br class="hidden visible-lg-inline-block">
+              <h1>Protoplanetary Disks<br class="hidden visible-lg-inline-block">
               </h1>
-              <p class="big postfix-xl-right--30">Planet 9 intro.</p>
+              <p class="big postfix-xl-right--30">Protoplanetary Disks intro... <a style="font-weight:bold" href="https://arxiv.org/abs/2506.10435">paper:</a></p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
