--- a/science/microlensing/index.html
+++ b/science/microlensing/index.html
@@ -57,7 +57,7 @@
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
               <h1>Gravitational Lensing<br class="hidden visible-lg-inline-block">
               </h1>
-              <p class="big postfix-xl-right--30">Microlensing intro.</p>
+              <p class="big postfix-xl-right--30">Microlensing intro... <a style="font-weight:bold" href="https://arxiv.org/abs/2004.14347">paper 1:</a></p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
