--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="shell shell-wide">
           <div class="range range-md-middle">
-            <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="images/surf.png" width="300" height="300" alt="" class="img-responsive"></a></div>
+            <div class="cell-md-6"><a href="https://github.com/Professor-G" class="brand"><img src="images/lake.jpg" width="300" height="300" alt="" class="img-responsive"></a></div>
             <div class="cell-md-6 text-md-right">
             </div>
           </div>
